social media icons

--- a/PassionFruitBasic/css/style.css
+++ b/PassionFruitBasic/css/style.css
@@ -60,7 +60,60 @@ padding:0;
 width:100%;
 }
 
+/*----------------------------------------Top Menu---------------------------------------*/
 
+#top-menu{
+
+float:right;
+margin-right:400px;
+margin-top:-60px;
+}
+#top-menu ul li{
+list-style:none;
+display:inline;
+}
+
+#top-menu ul li a{
+display:inline-block;
+
+}
+#top-menu ul li a{
+display:inline-block;
+
+}
+
+#top-menu .fblink{
+background-image:url(../images/FB1.png);
+width:50px; height:50px;
+}
+#top-menu .fblink:hover{
+background-image:url(../images/FB2.png);
+width:50px; height:50px;
+}
+#top-menu .twitter{
+background-image:url(../images/TW1.png);
+width:50px; height:50px;
+}
+#top-menu .twitter:hover{
+background-image:url(../images/TW2.png);
+width:51px; height:50px;
+}
+#top-menu .linkedin{
+background-image:url(../images/LK1.png);
+width:51px; height:50px;
+}
+#top-menu .linkedin:hover{
+background-image:url(../images/LK2.png);
+width:50px; height:50px;
+}
+#top-menu .googlePlus{
+background-image:url(../images/gp1.png);
+width:50px; height:50px;
+}
+#top-menu .googlePlus:hover{
+background-image:url(../images/gp2.png);
+width:50px; height:50px;
+}
 /*--------------------------------------------Header----------------------------------------------*/
 
 
@@ -182,11 +235,127 @@ color:#000;
 }
 /*--------------------------EoF grid---------------------------------------*/
 
-
-/*footer{
+footer{
 width:auto;
 margin-top:50px;
 height:150px;
 background:linear-gradient(5deg,#251E00 2%, #CCA300 89%);
 }
-*/
+/*----------------------------------------Footer Top Menu---------------------------------------*/
+
+#top-menu-footer{
+
+float:right;
+margin-right:120px;
+margin-top:30px;
+}
+#top-menu-footer ul li{
+list-style:none;
+display:inline;
+}
+
+#top-menu-footer ul li a{
+display:inline-block;
+
+}
+#top-menu-footer .fblink{
+background-image:url(../images/FBF1.png);
+width:37px; height:37px;
+}
+#top-menu-footer .fblink:hover{
+background-image:url(../images/FB2.png);
+width:50px; height:50px;
+}
+#top-menu-footer .twitter{
+background-image:url(../images/TWF1.png);
+width:37px; height:37px;
+}
+#top-menu-footer .twitter:hover{
+background-image:url(../images/TW2.png);
+width:50px; height:50px;
+}
+#top-menu-footer .linkedin{
+background-image:url(../images/LKF.png);
+width:38px; height:37px;
+}
+#top-menu-footer .linkedin:hover{
+background-image:url(../images/LK2.png);
+width:51px; height:50px;
+}
+#top-menu-footer .googlePlus{
+background-image:url(../images/gpf.png);
+width:43px; height:37px;
+margin-left:-6px;
+}
+#top-menu-footer .googlePlus:hover{
+background-image:url(../images/gp2.png);
+width:50px; height:49px;
+margin-left:0px;
+}
+
+#link-footer1, #link-footer2, #link-footer3{
+display:inline-block;
+padding:30px;
+}
+
+.foothead{
+font: bold 14px rockwell;
+
+}
+
+.foothead a{
+text-decoration:none;
+color:#000;
+}
+
+#link-footer1{
+margin-left:80px;
+}
+#link-footer1 li{
+list-style:none;
+}
+
+#link-footer1 li a{
+text-decoration:none;
+font:14px bold rockwell;
+color:#000;
+margin-left:-40px;
+}
+
+#link-footer2{
+
+}
+#link-footer2 li{
+list-style:none;
+}
+
+#link-footer2 li a{
+text-decoration:none;
+font:14px bold rockwell;
+color:#000;
+margin-left:-40px;
+}
+
+
+#link-footer3{
+
+}
+#link-footer3 li{
+list-style:none;
+}
+
+#link-footer3 li a{
+text-decoration:none;
+font:14px bold rockwell;
+color:#000;
+margin-left:-40px;
+}
+
+#link-footer4 {
+margin-top:-88px;
+margin-left:610px;
+}
+#link-footer5 {
+margin-top:10px;
+margin-left:610px;
+}
