--- a/SoftwareCoreBlueTemplate/css/style.css
+++ b/SoftwareCoreBlueTemplate/css/style.css
@@ -244,7 +244,7 @@ footer{
 width:auto;
 margin-top:60px;
 height:250px;
-background:linear-gradient(0deg, #669999 20%, #3399FF 80%);
+background:linear-gradient(180deg, #EBFFFF 20%, #3399FF 80%);
 font-family:verdana;
 }
 /*----------------------------------------Footer Top Menu---------------------------------------*/
